hard-gists/4350345/run.log
=== Docker Run Log for 4350345 ===
Started at: Mi 29. Okt 14:36:18 CET 2025

[2025-10-29 14:36:19] START: Running container for 4350345
[2025-10-29 14:36:19] SUCCESS: Container 35c9556b99af3b1aac6a7885b15e90b303306a37174a834f10b45b5a994358f3 started for 4350345
=== Container logs for 4350345 ===
  File "/snippet.py", line 53
    print document.title, document.keywords
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4350345 ===
[2025-10-29 14:36:21] INFO: Container 35c9556b99af3b1aac6a7885b15e90b303306a37174a834f10b45b5a994358f3 has stopped
